--- a/MobileUpTest/UILayer/MessageTableViewCell/MessageTableViewCell.xib
+++ b/MobileUpTest/UILayer/MessageTableViewCell/MessageTableViewCell.xib
@@ -9,47 +9,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="84" id="KGk-i7-Jjw" customClass="MessageTableViewCell" customModule="MobileUpTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="68" id="KGk-i7-Jjw" customClass="MessageTableViewCell" customModule="MobileUpTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nqA-Jh-T4q">
+                        <rect key="frame" x="26" y="15.5" width="45" height="44"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="45" id="KpF-nt-2c3"/>
+                            <constraint firstAttribute="height" constant="45" id="ueg-he-DL1"/>
+                        </constraints>
+                    </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ueS-PP-arL">
-                        <rect key="frame" x="16" y="12" width="288" height="60"/>
+                        <rect key="frame" x="83" y="12" width="221" height="52"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nqA-Jh-T4q">
-                                <rect key="frame" x="0.0" y="0.5" width="60" height="59"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="Ika-CY-w6q"/>
-                                </constraints>
-                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iiM-an-3mb">
-                                <rect key="frame" x="70" y="0.0" width="218" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="221" height="52"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yGb-rT-rWi">
-                                        <rect key="frame" x="0.0" y="0.0" width="218" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="221" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="John Smith" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gv8-cj-wqN">
-                                                <rect key="frame" x="0.0" y="0.0" width="146" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="149" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjP-dV-B4e">
-                                                <rect key="frame" x="156" y="0.0" width="34.5" height="20.5"/>
+                                                <rect key="frame" x="159" y="0.0" width="34.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="1jm-5g-jGV">
-                                                <rect key="frame" x="200.5" y="2" width="17.5" height="16"/>
+                                                <rect key="frame" x="203.5" y="2" width="17.5" height="16"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vze-sQ-aYq">
-                                        <rect key="frame" x="0.0" y="25.5" width="218" height="34.5"/>
+                                        <rect key="frame" x="0.0" y="25.5" width="221" height="26.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -60,8 +61,11 @@
                     </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="nqA-Jh-T4q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="26" id="5ze-ZE-fkR"/>
                     <constraint firstAttribute="bottom" secondItem="ueS-PP-arL" secondAttribute="bottom" constant="12" id="FbU-Jl-vGK"/>
-                    <constraint firstItem="ueS-PP-arL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="H8v-qf-OP3"/>
+                    <constraint firstAttribute="bottom" secondItem="nqA-Jh-T4q" secondAttribute="bottom" constant="16" id="Hti-pL-Z9n"/>
+                    <constraint firstItem="nqA-Jh-T4q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="IGF-gO-kMe"/>
+                    <constraint firstItem="ueS-PP-arL" firstAttribute="leading" secondItem="nqA-Jh-T4q" secondAttribute="trailing" constant="12" id="Jgu-WT-r8K"/>
                     <constraint firstAttribute="trailing" secondItem="ueS-PP-arL" secondAttribute="trailing" constant="16" id="JoM-bm-Ylt"/>
                     <constraint firstItem="ueS-PP-arL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Vin-3V-DiD"/>
                 </constraints>
@@ -73,7 +77,7 @@
                 <outlet property="personImageView" destination="nqA-Jh-T4q" id="jIH-lQ-X5t"/>
                 <outlet property="personNameLabel" destination="Gv8-cj-wqN" id="NmF-ky-RaJ"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="91.741071428571431"/>
+            <point key="canvasLocation" x="137.68115942028987" y="89.0625"/>
         </tableViewCell>
     </objects>
     <resources>
