--- a/MobileUpTest/UILayer/MessageTableViewCell/MessageTableViewCell.xib
+++ b/MobileUpTest/UILayer/MessageTableViewCell/MessageTableViewCell.xib
@@ -33,19 +33,19 @@
                                         <rect key="frame" x="0.0" y="0.0" width="221" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="John Smith" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gv8-cj-wqN">
-                                                <rect key="frame" x="0.0" y="0.0" width="149" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="158.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjP-dV-B4e">
-                                                <rect key="frame" x="159" y="0.0" width="34.5" height="20.5"/>
+                                                <rect key="frame" x="168.5" y="0.0" width="34.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="1jm-5g-jGV">
-                                                <rect key="frame" x="203.5" y="2" width="17.5" height="16"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disclosureArrow" translatesAutoresizingMaskIntoConstraints="NO" id="1jm-5g-jGV">
+                                                <rect key="frame" x="213" y="0.0" width="8" height="20.5"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
@@ -81,7 +81,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrowtriangle.forward" catalog="system" width="128" height="113"/>
+        <image name="disclosureArrow" width="8" height="13"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
